plugins {
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'maven-publish'
    id 'java'
}

group = 'net.foulest'
version = '1.0.0'
description = 'OspreyProxy'

// Set the language level to Java 21
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    implementation('org.springframework.boot:spring-boot-starter-webflux') {
        // Exclude Reactor debug agent
        exclude group: 'io.projectreactor', module: 'reactor-tools'
    }

    // JetBrains Annotations - for code inspection and documentation
    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    compileOnly group: 'org.jetbrains', name: 'annotations', version: '26.1.0'

    // Lombok - for reducing boilerplate code
    // https://projectlombok.org
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
}

tasks {
    bootJar {
        archiveFileName.set("${project.name}-${project.version}.jar")
    }

    bootRun {
        jvmArgs = [
                '-Xms512m',
                '-Xmx1g',
                '-XX:MaxDirectMemorySize=256m',
                '-XX:+UseZGC',
                '-XX:+UnlockDiagnosticVMOptions',
                '-XX:+DebugNonSafepoints'
        ]
    }

    build {
        dependsOn(bootJar)
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'net.foulest.ospreyproxy'
            artifactId = project.name
            version = project.version
            from components.java
        }
    }
}
